DOCS: Add documentation for create company
